package edu.hitsz.factory;

//
//public class BloodPropFactory implements PropFactory {
//    public AbstractProp propCreator(AbstractAircraft enemyAircraft){
//        return new BloodProp(
//                enemyAircraft.getLocationX(),
//                enemyAircraft.getLocationY(),
//                0,
//                0);
//    }
//}
