package edu.hitsz.factory;

//public class BombPropFactory implements PropFactory {
//    @Override
//    public AbstractProp propCreator(AbstractAircraft enemyAircraft) {
//        return new BombProp(
//                enemyAircraft.getLocationX(),
//                enemyAircraft.getLocationY(),
//                0,
//                0);
//    }
//}
