package edu.hitsz.factory;

//public class FirePropFactory implements PropFactory {
//    @Override
//    public AbstractProp propCreator(AbstractAircraft enemyAircraft) {
//        return new FireProp(
//                enemyAircraft.getLocationX(),
//                enemyAircraft.getLocationY(),
//                0,
//                0);
//    }
//}
